Practica_04/src/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones : definiciones definicion
   3               | definicion

   4  definicion : expression ';'
   5             | var_final ';'
   6             | function
   7             | call_function ';'
   8             | struct ';'
   9             | array_init ';'
  10             | PRINT definicion
  11             | statement

  12  statement : while
  13            | if
  14            | return

  15  expression : expression '+' expression
  16             | expression '-' expression
  17             | expression '*' expression
  18             | expression '/' expression
  19             | expression '%' expression
  20             | expression '.' ID
  21             | expression '=' definicion
  22             | expression '>' expression
  23             | expression '<' expression
  24             | expression '=' '=' expression
  25             | expression '>' '=' expression
  26             | expression '<' '=' expression
  27             | expression '!' '=' expression
  28             | '(' type ')' expression
  29             | INT_CONSTANT
  30             | REAL_CONSTANT
  31             | CHAR_CONSTANT
  32             | ID

  33  var_final : ID ',' var_final
  34            | var

  35  var : expression ':' type
  36      | expression '[' expression ']' ':' type
  37      | expression '[' expression ']' '[' expression ']' ':' type
  38      | expression '[' ']' ':' type
  39      | expression '[' ']' '[' ']' ':' type

  40  function : def ID '(' function_params ')' ':' type function_body

  41  function_params : function_params ',' var
  42                  | var
  43                  |

  44  function_body : '{' '}'
  45                | '{' definiciones '}'

  46  call_function : ID '(' call_function_params ')'

  47  call_function_params : call_function_params ',' expression
  48                       | expression
  49                       |

  50  return : RETURN ';'

  51  while : WHILE '(' condition ')' ':' function_body
  52        | WHILE condition ':' function_body

  53  if : IF '(' condition ')' ':' ifelse_body ELSE ifelse_body
  54     | IF '(' condition ')' ':' ifelse_body
  55     | IF condition ':' ifelse_body ELSE ifelse_body
  56     | IF condition ':' ifelse_body

  57  ifelse_body : '{' definiciones '}'
  58              | definicion

  59  condition : expression '|' '|' expression
  60            | expression '&' '&' expression
  61            | expression

  62  struct : expression ':' STRUCT '{' struct_body ';' '}'

  63  struct_body : struct_body ';' struct_params
  64              | struct_params

  65  struct_params : var
  66                | struct

  67  type : INT
  68       | REAL_TYPE
  69       | CHAR_TYPE
  70       | VOID

state 0
	$accept : . programa $end  (0)

	INT_CONSTANT  shift 1
	ID  shift 2
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	def  shift 5
	RETURN  shift 6
	WHILE  shift 7
	IF  shift 8
	PRINT  shift 9
	'('  shift 10
	array_init  shift 11
	.  error

	programa  goto 12
	definiciones  goto 13
	definicion  goto 14
	expression  goto 15
	var_final  goto 16
	function  goto 17
	call_function  goto 18
	struct  goto 19
	statement  goto 20
	while  goto 21
	if  goto 22
	return  goto 23
	var  goto 24


state 1
	expression : INT_CONSTANT .  (29)

	.  reduce 29


state 2
	expression : ID .  (32)
	var_final : ID . ',' var_final  (33)
	call_function : ID . '(' call_function_params ')'  (46)

	','  shift 25
	'('  shift 26
	'+'  reduce 32
	'-'  reduce 32
	'*'  reduce 32
	'/'  reduce 32
	'%'  reduce 32
	'>'  reduce 32
	'<'  reduce 32
	':'  reduce 32
	'='  reduce 32
	';'  reduce 32
	'.'  reduce 32
	'['  reduce 32
	'!'  reduce 32


state 3
	expression : CHAR_CONSTANT .  (31)

	.  reduce 31


state 4
	expression : REAL_CONSTANT .  (30)

	.  reduce 30


state 5
	function : def . ID '(' function_params ')' ':' type function_body  (40)

	ID  shift 27
	.  error


state 6
	return : RETURN . ';'  (50)

	';'  shift 28
	.  error


state 7
	while : WHILE . '(' condition ')' ':' function_body  (51)
	while : WHILE . condition ':' function_body  (52)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 30
	.  error

	expression  goto 31
	condition  goto 32


state 8
	if : IF . '(' condition ')' ':' ifelse_body ELSE ifelse_body  (53)
	if : IF . '(' condition ')' ':' ifelse_body  (54)
	if : IF . condition ':' ifelse_body ELSE ifelse_body  (55)
	if : IF . condition ':' ifelse_body  (56)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 33
	.  error

	expression  goto 31
	condition  goto 34


state 9
	definicion : PRINT . definicion  (10)

	INT_CONSTANT  shift 1
	ID  shift 2
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	def  shift 5
	RETURN  shift 6
	WHILE  shift 7
	IF  shift 8
	PRINT  shift 9
	'('  shift 10
	array_init  shift 11
	.  error

	definicion  goto 35
	expression  goto 15
	var_final  goto 16
	function  goto 17
	call_function  goto 18
	struct  goto 19
	statement  goto 20
	while  goto 21
	if  goto 22
	return  goto 23
	var  goto 24


state 10
	expression : '(' . type ')' expression  (28)

	INT  shift 36
	REAL_TYPE  shift 37
	CHAR_TYPE  shift 38
	VOID  shift 39
	.  error

	type  goto 40


state 11
	definicion : array_init . ';'  (9)

	';'  shift 41
	.  error


state 12
	$accept : programa . $end  (0)

	$end  accept


state 13
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (2)

	INT_CONSTANT  shift 1
	ID  shift 2
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	def  shift 5
	RETURN  shift 6
	WHILE  shift 7
	IF  shift 8
	PRINT  shift 9
	'('  shift 10
	array_init  shift 11
	$end  reduce 1

	definicion  goto 42
	expression  goto 15
	var_final  goto 16
	function  goto 17
	call_function  goto 18
	struct  goto 19
	statement  goto 20
	while  goto 21
	if  goto 22
	return  goto 23
	var  goto 24


state 14
	definiciones : definicion .  (3)

	.  reduce 3


state 15
	definicion : expression . ';'  (4)
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)
	var : expression . ':' type  (35)
	var : expression . '[' expression ']' ':' type  (36)
	var : expression . '[' expression ']' '[' expression ']' ':' type  (37)
	var : expression . '[' ']' ':' type  (38)
	var : expression . '[' ']' '[' ']' ':' type  (39)
	struct : expression . ':' STRUCT '{' struct_body ';' '}'  (62)

	'+'  shift 43
	'-'  shift 44
	'*'  shift 45
	'/'  shift 46
	'%'  shift 47
	'>'  shift 48
	'<'  shift 49
	':'  shift 50
	'='  shift 51
	';'  shift 52
	'.'  shift 53
	'['  shift 54
	'!'  shift 55
	.  error


state 16
	definicion : var_final . ';'  (5)

	';'  shift 56
	.  error


state 17
	definicion : function .  (6)

	.  reduce 6


state 18
	definicion : call_function . ';'  (7)

	';'  shift 57
	.  error


state 19
	definicion : struct . ';'  (8)

	';'  shift 58
	.  error


state 20
	definicion : statement .  (11)

	.  reduce 11


state 21
	statement : while .  (12)

	.  reduce 12


state 22
	statement : if .  (13)

	.  reduce 13


state 23
	statement : return .  (14)

	.  reduce 14


state 24
	var_final : var .  (34)

	.  reduce 34


state 25
	var_final : ID ',' . var_final  (33)

	INT_CONSTANT  shift 1
	ID  shift 59
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 60
	var_final  goto 61
	var  goto 24


state 26
	call_function : ID '(' . call_function_params ')'  (46)
	call_function_params : .  (49)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	','  reduce 49
	')'  reduce 49

	expression  goto 62
	call_function_params  goto 63


state 27
	function : def ID . '(' function_params ')' ':' type function_body  (40)

	'('  shift 64
	.  error


state 28
	return : RETURN ';' .  (50)

	.  reduce 50


state 29
	expression : ID .  (32)

	.  reduce 32


state 30
	expression : '(' . type ')' expression  (28)
	while : WHILE '(' . condition ')' ':' function_body  (51)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	INT  shift 36
	REAL_TYPE  shift 37
	CHAR_TYPE  shift 38
	VOID  shift 39
	'('  shift 10
	.  error

	expression  goto 31
	type  goto 40
	condition  goto 65


state 31
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)
	condition : expression . '|' '|' expression  (59)
	condition : expression . '&' '&' expression  (60)
	condition : expression .  (61)

	'+'  shift 43
	'-'  shift 44
	'*'  shift 45
	'/'  shift 46
	'%'  shift 47
	'>'  shift 48
	'<'  shift 49
	'='  shift 51
	'.'  shift 53
	'!'  shift 55
	'|'  shift 66
	'&'  shift 67
	':'  reduce 61
	')'  reduce 61


state 32
	while : WHILE condition . ':' function_body  (52)

	':'  shift 68
	.  error


state 33
	expression : '(' . type ')' expression  (28)
	if : IF '(' . condition ')' ':' ifelse_body ELSE ifelse_body  (53)
	if : IF '(' . condition ')' ':' ifelse_body  (54)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	INT  shift 36
	REAL_TYPE  shift 37
	CHAR_TYPE  shift 38
	VOID  shift 39
	'('  shift 10
	.  error

	expression  goto 31
	type  goto 40
	condition  goto 69


state 34
	if : IF condition . ':' ifelse_body ELSE ifelse_body  (55)
	if : IF condition . ':' ifelse_body  (56)

	':'  shift 70
	.  error


state 35
	definicion : PRINT definicion .  (10)

	.  reduce 10


state 36
	type : INT .  (67)

	.  reduce 67


state 37
	type : REAL_TYPE .  (68)

	.  reduce 68


state 38
	type : CHAR_TYPE .  (69)

	.  reduce 69


state 39
	type : VOID .  (70)

	.  reduce 70


state 40
	expression : '(' type . ')' expression  (28)

	')'  shift 71
	.  error


state 41
	definicion : array_init ';' .  (9)

	.  reduce 9


state 42
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 43
	expression : expression '+' . expression  (15)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 72


state 44
	expression : expression '-' . expression  (16)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 73


state 45
	expression : expression '*' . expression  (17)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 74


state 46
	expression : expression '/' . expression  (18)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 75


state 47
	expression : expression '%' . expression  (19)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 76


state 48
	expression : expression '>' . expression  (22)
	expression : expression '>' . '=' expression  (25)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'='  shift 77
	'('  shift 10
	.  error

	expression  goto 78


state 49
	expression : expression '<' . expression  (23)
	expression : expression '<' . '=' expression  (26)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'='  shift 79
	'('  shift 10
	.  error

	expression  goto 80


state 50
	var : expression ':' . type  (35)
	struct : expression ':' . STRUCT '{' struct_body ';' '}'  (62)

	STRUCT  shift 81
	INT  shift 36
	REAL_TYPE  shift 37
	CHAR_TYPE  shift 38
	VOID  shift 39
	.  error

	type  goto 82


state 51
	expression : expression '=' . definicion  (21)
	expression : expression '=' . '=' expression  (24)

	INT_CONSTANT  shift 1
	ID  shift 2
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	def  shift 5
	RETURN  shift 6
	WHILE  shift 7
	IF  shift 8
	PRINT  shift 9
	'='  shift 83
	'('  shift 10
	array_init  shift 11
	.  error

	definicion  goto 84
	expression  goto 15
	var_final  goto 16
	function  goto 17
	call_function  goto 18
	struct  goto 19
	statement  goto 20
	while  goto 21
	if  goto 22
	return  goto 23
	var  goto 24


state 52
	definicion : expression ';' .  (4)

	.  reduce 4


state 53
	expression : expression '.' . ID  (20)

	ID  shift 85
	.  error


state 54
	var : expression '[' . expression ']' ':' type  (36)
	var : expression '[' . expression ']' '[' expression ']' ':' type  (37)
	var : expression '[' . ']' ':' type  (38)
	var : expression '[' . ']' '[' ']' ':' type  (39)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	']'  shift 86
	.  error

	expression  goto 87


state 55
	expression : expression '!' . '=' expression  (27)

	'='  shift 88
	.  error


state 56
	definicion : var_final ';' .  (5)

	.  reduce 5


state 57
	definicion : call_function ';' .  (7)

	.  reduce 7


state 58
	definicion : struct ';' .  (8)

	.  reduce 8


state 59
	expression : ID .  (32)
	var_final : ID . ',' var_final  (33)

	','  shift 25
	'+'  reduce 32
	'-'  reduce 32
	'*'  reduce 32
	'/'  reduce 32
	'%'  reduce 32
	'>'  reduce 32
	'<'  reduce 32
	':'  reduce 32
	'='  reduce 32
	'.'  reduce 32
	'['  reduce 32
	'!'  reduce 32


state 60
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)
	var : expression . ':' type  (35)
	var : expression . '[' expression ']' ':' type  (36)
	var : expression . '[' expression ']' '[' expression ']' ':' type  (37)
	var : expression . '[' ']' ':' type  (38)
	var : expression . '[' ']' '[' ']' ':' type  (39)

	'+'  shift 43
	'-'  shift 44
	'*'  shift 45
	'/'  shift 46
	'%'  shift 47
	'>'  shift 48
	'<'  shift 49
	':'  shift 89
	'='  shift 51
	'.'  shift 53
	'['  shift 54
	'!'  shift 55
	.  error


state 61
	var_final : ID ',' var_final .  (33)

	.  reduce 33


state 62
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)
	call_function_params : expression .  (48)

	'+'  shift 43
	'-'  shift 44
	'*'  shift 45
	'/'  shift 46
	'%'  shift 47
	'>'  shift 48
	'<'  shift 49
	'='  shift 51
	'.'  shift 53
	'!'  shift 55
	','  reduce 48
	')'  reduce 48


state 63
	call_function : ID '(' call_function_params . ')'  (46)
	call_function_params : call_function_params . ',' expression  (47)

	','  shift 90
	')'  shift 91
	.  error


state 64
	function : def ID '(' . function_params ')' ':' type function_body  (40)
	function_params : .  (43)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	','  reduce 43
	')'  reduce 43

	expression  goto 60
	var  goto 92
	function_params  goto 93


state 65
	while : WHILE '(' condition . ')' ':' function_body  (51)

	')'  shift 94
	.  error


state 66
	condition : expression '|' . '|' expression  (59)

	'|'  shift 95
	.  error


state 67
	condition : expression '&' . '&' expression  (60)

	'&'  shift 96
	.  error


state 68
	while : WHILE condition ':' . function_body  (52)

	'{'  shift 97
	.  error

	function_body  goto 98


state 69
	if : IF '(' condition . ')' ':' ifelse_body ELSE ifelse_body  (53)
	if : IF '(' condition . ')' ':' ifelse_body  (54)

	')'  shift 99
	.  error


state 70
	if : IF condition ':' . ifelse_body ELSE ifelse_body  (55)
	if : IF condition ':' . ifelse_body  (56)

	INT_CONSTANT  shift 1
	ID  shift 2
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	def  shift 5
	RETURN  shift 6
	WHILE  shift 7
	IF  shift 8
	PRINT  shift 9
	'('  shift 10
	array_init  shift 11
	'{'  shift 100
	.  error

	definicion  goto 101
	expression  goto 15
	var_final  goto 16
	function  goto 17
	call_function  goto 18
	struct  goto 19
	statement  goto 20
	while  goto 21
	if  goto 22
	return  goto 23
	var  goto 24
	ifelse_body  goto 102


state 71
	expression : '(' type ')' . expression  (28)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 103


state 72
	expression : expression . '+' expression  (15)
	expression : expression '+' expression .  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)

	'*'  shift 45
	'/'  shift 46
	'%'  shift 47
	'>'  shift 48
	'<'  shift 49
	'='  shift 51
	'.'  shift 53
	'!'  shift 55
	'+'  reduce 15
	'-'  reduce 15
	':'  reduce 15
	';'  reduce 15
	','  reduce 15
	')'  reduce 15
	'['  reduce 15
	']'  reduce 15
	'|'  reduce 15
	'&'  reduce 15


state 73
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression '-' expression .  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)

	'*'  shift 45
	'/'  shift 46
	'%'  shift 47
	'>'  shift 48
	'<'  shift 49
	'='  shift 51
	'.'  shift 53
	'!'  shift 55
	'+'  reduce 16
	'-'  reduce 16
	':'  reduce 16
	';'  reduce 16
	','  reduce 16
	')'  reduce 16
	'['  reduce 16
	']'  reduce 16
	'|'  reduce 16
	'&'  reduce 16


state 74
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression '*' expression .  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)

	'>'  shift 48
	'<'  shift 49
	'='  shift 51
	'.'  shift 53
	'!'  shift 55
	'+'  reduce 17
	'-'  reduce 17
	'*'  reduce 17
	'/'  reduce 17
	'%'  reduce 17
	':'  reduce 17
	';'  reduce 17
	','  reduce 17
	')'  reduce 17
	'['  reduce 17
	']'  reduce 17
	'|'  reduce 17
	'&'  reduce 17


state 75
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression '/' expression .  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)

	'>'  shift 48
	'<'  shift 49
	'='  shift 51
	'.'  shift 53
	'!'  shift 55
	'+'  reduce 18
	'-'  reduce 18
	'*'  reduce 18
	'/'  reduce 18
	'%'  reduce 18
	':'  reduce 18
	';'  reduce 18
	','  reduce 18
	')'  reduce 18
	'['  reduce 18
	']'  reduce 18
	'|'  reduce 18
	'&'  reduce 18


state 76
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression '%' expression .  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)

	'>'  shift 48
	'<'  shift 49
	'='  shift 51
	'.'  shift 53
	'!'  shift 55
	'+'  reduce 19
	'-'  reduce 19
	'*'  reduce 19
	'/'  reduce 19
	'%'  reduce 19
	':'  reduce 19
	';'  reduce 19
	','  reduce 19
	')'  reduce 19
	'['  reduce 19
	']'  reduce 19
	'|'  reduce 19
	'&'  reduce 19


state 77
	expression : expression '>' '=' . expression  (25)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 104


state 78
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression '>' expression .  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)

	'='  shift 51
	'.'  shift 53
	'!'  shift 55
	'+'  reduce 22
	'-'  reduce 22
	'*'  reduce 22
	'/'  reduce 22
	'%'  reduce 22
	'>'  reduce 22
	'<'  reduce 22
	':'  reduce 22
	';'  reduce 22
	','  reduce 22
	')'  reduce 22
	'['  reduce 22
	']'  reduce 22
	'|'  reduce 22
	'&'  reduce 22


state 79
	expression : expression '<' '=' . expression  (26)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 105


state 80
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression '<' expression .  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)

	'='  shift 51
	'.'  shift 53
	'!'  shift 55
	'+'  reduce 23
	'-'  reduce 23
	'*'  reduce 23
	'/'  reduce 23
	'%'  reduce 23
	'>'  reduce 23
	'<'  reduce 23
	':'  reduce 23
	';'  reduce 23
	','  reduce 23
	')'  reduce 23
	'['  reduce 23
	']'  reduce 23
	'|'  reduce 23
	'&'  reduce 23


state 81
	struct : expression ':' STRUCT . '{' struct_body ';' '}'  (62)

	'{'  shift 106
	.  error


state 82
	var : expression ':' type .  (35)

	.  reduce 35


state 83
	expression : expression '=' '=' . expression  (24)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 107


state 84
	expression : expression '=' definicion .  (21)

	.  reduce 21


state 85
	expression : expression '.' ID .  (20)

	.  reduce 20


state 86
	var : expression '[' ']' . ':' type  (38)
	var : expression '[' ']' . '[' ']' ':' type  (39)

	':'  shift 108
	'['  shift 109
	.  error


state 87
	expression : expression . '+' expression  (15)
	expression : expression . '-' expression  (16)
	expression : expression . '*' expression  (17)
	expression : expression . '/' expression  (18)
	expression : expression . '%' expression  (19)
	expression : expression . '.' ID  (20)
	expression : expression . '=' definicion  (21)
	expression : expression . '>' expression  (22)
	expression : expression . '<' expression  (23)
	expression : expression . '=' '=' expression  (24)
	expression : expression . '>' '=' expression  (25)
	expression : expression . '<' '=' expression  (26)
	expression : expression . '!' '=' expression  (27)
	var : expression '[' expression . ']' ':' type  (36)
	var : expression '[' expression . ']' '[' expression ']' ':' type  (37)

	'+'  shift 43
	'-'  shift 44
	'*'  shift 45
	'/'  shift 46
	'%'  shift 47
	'>'  shift 48
	'<'  shift 49
	'='  shift 51
	'.'  shift 53
	']'  shift 110
	'!'  shift 55
	.  error


state 88
	expression : expression '!' '=' . expression  (27)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 111


state 89
	var : expression ':' . type  (35)

	INT  shift 36
	REAL_TYPE  shift 37
	CHAR_TYPE  shift 38
	VOID  shift 39
	.  error

	type  goto 82


state 90
	call_function_params : call_function_params ',' . expression  (47)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 112


state 91
	call_function : ID '(' call_function_params ')' .  (46)

	.  reduce 46


state 92
	function_params : var .  (42)

	.  reduce 42


state 93
	function : def ID '(' function_params . ')' ':' type function_body  (40)
	function_params : function_params . ',' var  (41)

	','  shift 113
	')'  shift 114
	.  error


state 94
	while : WHILE '(' condition ')' . ':' function_body  (51)

	':'  shift 115
	.  error


state 95
	condition : expression '|' '|' . expression  (59)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 116


state 96
	condition : expression '&' '&' . expression  (60)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	.  error

	expression  goto 117


state 97
	function_body : '{' . '}'  (44)
	function_body : '{' . definiciones '}'  (45)

	INT_CONSTANT  shift 1
	ID  shift 2
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	def  shift 5
	RETURN  shift 6
	WHILE  shift 7
	IF  shift 8
	PRINT  shift 9
	'('  shift 10
	array_init  shift 11
	'}'  shift 118
	.  error

	definiciones  goto 119
	definicion  goto 14
	expression  goto 15
	var_final  goto 16
	function  goto 17
	call_function  goto 18
	struct  goto 19
	statement  goto 20
	while  goto 21
	if  goto 22
	return  goto 23
	var  goto 24


state 98
	while : WHILE condition ':' function_body .  (52)

	.  reduce 52


state 99
	if : IF '(' condition ')' . ':' ifelse_body ELSE ifelse_body  (53)
	if : IF '(' condition ')' . ':' ifelse_body  (54)

	':'  shift 120
	.  error


state 100
	ifelse_body : '{' . definiciones '}'  (57)

	INT_CONSTANT  shift 1
	ID  shift 2
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	def  shift 5
	RETURN  shift 6
	WHILE  shift 7
	IF  shift 8
	PRINT  shift 9
	'('  shift 10
	array_init  shift 11
	.  error

	definiciones  goto 121
	definicion  goto 14
	expression  goto 15
	var_final  goto 16
	function  goto 17
	call_function  goto 18
	struct  goto 19
	statement  goto 20
	while  goto 21
	if  goto 22
	return  goto 23
	var  goto 24


state 101
	ifelse_body : definicion .  (58)

	.  reduce 58


state 102
	if : IF condition ':' ifelse_body . ELSE ifelse_body  (55)
	if : IF condition ':' ifelse_body .  (56)

	ELSE  shift 122
	$end  reduce 56
	INT_CONSTANT  reduce 56
	ID  reduce 56
	CHAR_CONSTANT  reduce 56
	REAL_CONSTANT  reduce 56
	def  reduce 56
	RETURN  reduce 56
	WHILE  reduce 56
	IF  reduce 56
	PRINT  reduce 56
	'+'  reduce 56
	'-'  reduce 56
	'*'  reduce 56
	'/'  reduce 56
	'%'  reduce 56
	'>'  reduce 56
	'<'  reduce 56
	':'  reduce 56
	'='  reduce 56
	';'  reduce 56
	','  reduce 56
	'.'  reduce 56
	'('  reduce 56
	')'  reduce 56
	'['  reduce 56
	']'  reduce 56
	'!'  reduce 56
	array_init  reduce 56
	'}'  reduce 56
	'|'  reduce 56
	'&'  reduce 56

